feat: automated update system - auto-check on startup, Update Now button on Dashboard, real progress bar, retry logic, release notes fix